It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Wed, Jul 1, 2009
---------------------------------------------------------------------
- Added copyright notices (thanks, Michael!).

Tue, Jun 30, 2009
---------------------------------------------------------------------
- More work on user profile.
- Applied patches to fix an issue with comments and their formatting (thanks, Eric!).

Sun, Jun 28, 2009
---------------------------------------------------------------------
- Another iteration on User Profiles; all users now have personal profile page.
- Fixed form validation issue on asset landing pages (closes GH #3).
- Refactored form validation specs.
- Release 0.9.3.

Sat, Jun 27, 2009
---------------------------------------------------------------------
Combined [Preferences] and [Profile] into single [Preferences] menu item.

Thu, Jun 25, 2008
---------------------------------------------------------------------
- Hide [Create...] form before showing [Edit...] to make sure initial focus gets set properly.
- Rewrote config/settings.yml to use more familiar Ruby-like syntax.

Mon, Jun 22, 2009
---------------------------------------------------------------------
- Fat Free CRM website is up at http://www.fatfreecrm.com

Sat, Jun 20, 2009
---------------------------------------------------------------------
- Assets now show all related tasks, even if they were not created or assigned by current user.
- Release 0.9.2.

Fri, Jun 19, 2009
---------------------------------------------------------------------
- Revamping the way a list of tasks is shown on related asset page.
- Added [completed_by] field to Task model to be able to show who completed the task.

Thu, Jun 18, 2009
---------------------------------------------------------------------
- Fixed task creation issue on landing pages; added missing task stylesheets.