@@ -1,0 +1,10 @@
+.remote
+  - remote_form_for(@user, :url => change_password_user_path(@user)) do |f|
+    = link_to_close change_password_user_path(@user)
+    %p Not implemented yet.
+    
+    .buttonbar
+      = f.submit "Change Password"
+      or
+      = link_to_cancel change_password_user_path(@user)
+%br
