@@ -1,0 +1,10 @@
+.remote
+  - remote_form_for(@user) do |f|
+    = link_to_close edit_user_path(@user)
+    %p Not implemented yet.
+    
+    .buttonbar
+      = f.submit "Save Profile"
+      or
+      = link_to_cancel edit_user_path(@user)
+%br
