@@ -1,0 +1,13 @@
+logger.p "avatar.js.rjs"
+# page.call "console.log", "avatar.js.rjs"
+
+if params[:cancel] == "true"
+  page.call "crm.flip_form", :upload_avatar
+  page.call "crm.set_title", :upload_avatar, "My Profile"
+else
+  page[:upload_avatar].replace_html :partial => "avatar"
+  page.call "crm.hide_form", :edit_profile
+  page.call "crm.hide_form", :change_password
+  page.call "crm.flip_form", :upload_avatar
+  page.call "crm.set_title", :upload_avatar
+end
