@@ -1,0 +1,13 @@
+logger.p "password.js.rjs"
+# page.call "console.log", "password.js.rjs"
+
+if params[:cancel] == "true"
+  page.call "crm.flip_form", :change_password
+  page.call "crm.set_title", :change_password, "My Profile"
+else
+  page[:change_password].replace_html :partial => "password"
+  page.call "crm.hide_form", :edit_profile
+  page.call "crm.hide_form", :upload_avatar
+  page.call "crm.flip_form", :change_password
+  page.call "crm.set_title", :change_password
+end
