@@ -43,6 +43,11 @@ aaron:
   email: aaron@example.com
   first_name: Aaron
   last_name: Assembler
+  title: VP of Sales
+  company: Example International
+  alt_email:
+  phone: (800)555-1210
+  mobile: (800)555-1211
   password_hash: 56d91c9f1a9c549304768982fd4e2d8bc2700b403b4524c0f14136dbbe2ce4cd923156ad69f9acce8305dba4e63faa884e61fb7a256cf8f5fc7c2ce176e68e8f
   password_salt: ce6e0200c96f4dd326b91f3967115a31421a0e7dcddc9ffb63a77f598a9fcb5326fe532dbd9836a2446e46840d398fa32c81f8f4da1a0fcfe931989e9639a013
   remember_token: d7cdeffd3625f7cb265b21126b85da7c930d47c4a708365c20eb857560055a6b57c9775becb8a957dfdb46df8aee17eb120a011b380e9cc0882f9dfaa2b7ba26
@@ -63,6 +68,11 @@ ben:
   email: ben@example.com
   first_name: Ben
   last_name: Bootloader
+  title: Customer Support
+  company: Example International
+  alt_email:
+  phone: (800)555-1220
+  mobile: (800)555-1221
   password_hash: 3b23bde6e4f766450a36f30c5076db4164ab4edf957fe602858086feb833251149a2505b8ec00330fa6d9b531ff32ec7619b2b413b5c5380007c4a021f3546c2
   password_salt: fce13d8b784003b4fb8d030866b5c3a003a914b9d52832d02b5f85db53413bcc8dd078d3e57e6c50b9bb8e8eb520e04a5f79cfb089a8bbe224e15e840b0dc594
   remember_token: 8d3789d1486d8aa421d5e7ca0c670badecf0e3b876dab5cf6de21fa867023d379f79e2d823cbdfc2a512d12e62b5343a62c4fc69f065c7c4850de424880399c5
@@ -83,6 +93,11 @@ cindy:
   email: cindy@example.com
   first_name: Cindy
   last_name: Cluster
+  title: Product Manager
+  company: Example International
+  alt_email:
+  phone: (800)555-1230
+  mobile: (800)555-1231
   password_hash: f323dc706086eeffee9997239f6fdfbd13ef0f62b0817cea1ef199912a64601e05e3a6c9074d2248b22e9e4ce5c817a9d9339839c2ae9502c9c1350f267f7b1f
   password_salt: bc41b1a96c66ac155c79cf68ff3a16dd97d4730bc3476575fcab3c2ae7751776cc48e6faa036961be40ed04a27690b6f5189234968d4a6fff981105f040d9014
   remember_token: 3f391c651f5f7edca17a34b044b7e1ac866625903dd9567bfbfe5eea74c9f571d502cae8fae83ca29eba7df2f2cd1ed0d71d380f680eaaeabaaf194a4009cba1
@@ -103,6 +118,11 @@ dan:
   email: dan@example.com
   first_name: Dan
   last_name: Debugger
+  title: Marketing Manager
+  company: Example International
+  alt_email:
+  phone: (800)555-1240
+  mobile: (800)555-1241
   password_hash: 508f242629443dae3777e945d59213e7f81084be9f8c71b6d06b81295e9ffac145a3c2a8870cc17598e2a7908e2107f838d29ae275cfbe4a135c67c4f27e2e58
   password_salt: e01633b1b2396fa3be0f689b87d68a55a831c043faffba0401131338e6aab5a8492a0b47a6947f0d96dd7188f51ecc530a2d72603802c7b409f1c42ce138de0b
   remember_token: a521f06f9a3ebacf0bab032cd46544d17d6bdbb9c2d1b413d9aa7c663da563e51a447e63f6af2d852d58d0c126411935ffea446fbad77549b77b99645c0b488d
@@ -123,6 +143,11 @@ elizabeth:
   email: elizabeth@example.com
   first_name: Elizabeth
   last_name: Emulator
+  title: Sales Associate
+  company: Example International
+  alt_email:
+  phone: (800)555-1250
+  mobile: (800)555-1251
   password_hash: 5e90a6f2f5be66010c8a0eb6f2089780f453d1400e3aa4d271520f8e2a2e26d00d98d3ae2ba36854b897cbbe1f51343f4e9ce96dd4da8705ba3db5bd8b0ed0e7
   password_salt: 80caf26a2981892f70acbc0ddb8fdd19c789163bfdefa3809355aef4bd989c8c6aa251c05b0923ef307e7b5269b6efdca380b0c28b8bf8f72ee5385a8557ed9b
   remember_token: f60bf40210246af4e7f85f1010e1b592a9862827015f506328b54afd7e487f760e3b382231dfc25dee3353f014cce419705f0453aa96b9b566065b2db7b93c1c
@@ -143,6 +168,11 @@ frank:
   email: frank@example.com
   first_name: Frank
   last_name: Formatter
+  title: Project Manager
+  company: Example International
+  alt_email:
+  phone: (800)555-1260
+  mobile: (800)555-1261
   password_hash: 1471e9dc79b636f465a529d89460fcefc8dbb0d2a14308349bd060d00dab4d35f1d91d201dbe37da4aa8c18a4430a09a6bca5babe05fb18ef3f02342dcf4e4ca
   password_salt: 805983077fdba9438de1d84007e093f658620211e1d0087d33662a5ca387b04206d098e152aeea896ab65aa026ac1fb9ce69dbe22a45fb9b21c3b6dcad4909f3
   remember_token: 6158edf71b5cdd674f9d86082f7c580ac27277fcaa9ea6732d2eefdaac09f20fa4554307c028fa294c2f2d4fbb6035f118048dffa351768d8cb9125285d06baf
@@ -164,6 +194,11 @@ george:
   email: george@example.com
   first_name: George
   last_name: Globals
+  title: Sales Manager
+  company: Example International
+  alt_email:
+  phone: (800)555-1270
+  mobile: (800)555-1271
   password_hash: 23ed19767095ab24c1c560393b5a577455ab49d595781f931905f0df072533c485b1902337ffb426dae1e70889557f5b531da8e7b782a0575cc7bd419d6a91b9
   password_salt: 80b5c87fb4c9fa5c50815016bc0160eb08c4e22e88fee558b5e739557d5178c61b06fcbebf6c4c62f37f0f7984ccc0d025e2f073880cd655b57542343e4981b6
   remember_token: 5eaccdebf683a87050df34e45c5e3aa9d884b132be4e1bc1d759924814518fa9d29adfe8556ad6e7223ec692a481d4f96772796ee835f3b14a7e86cba222abd6
@@ -185,6 +220,11 @@ heather:
   email: heather@example.com
   first_name: Heather
   last_name: Hash
+  title: Account Manager
+  company: Example International
+  alt_email:
+  phone: (800)555-1280
+  mobile: (800)555-1281
   password_hash: cdd2e9ec69c553c1f690b885c1cd1fd4e976c94a28693b793eba41796b0a96ce6f7cdd05ded8a84b30a96a37d18ad7fddd7435314bd612d033ead1c43bcde4d2
   password_salt: 729ab318245afa827a8c29e36c885c7b0d07e15193727b68a7cf5edac517e4d6fcafa4e5ddfff9c9305d3ccd37ef735823ba66ba8e2876fd2b06c7c27f3c9482
   remember_token: 6fd550c1ec1d422c3077f497fb3a886dbd9e24b10d0148ef1d8a0e477395594c7217857906fcab5deedadda246c932e39131837ff023c28d4902cb5990e6c87a
