@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Wed, Jul 1, 2009
 ---------------------------------------------------------------------
 - Added copyright notices (thanks, Michael!).
+- Added routes and Ajax form stubs for [Edit Profile], [Upload Avatar], and [Change Password].
 
 Tue, Jun 30, 2009
 ---------------------------------------------------------------------
